improved guidance & challenges for working with file types

--- a/day-1/preprocessing.ipynb
+++ b/day-1/preprocessing.ipynb
@@ -18,7 +18,7 @@
     "- Stemming/Lemmatizing\n",
     "- POS tagging\n",
     "\n",
-    "This notebook assumes you have basic familiarity with Python. If you need a beginner's introduction, see the notebook at `solutions/intro-to-python.ipynb`. "
+    "This notebook assumes you have basic familiarity with Python. If you need a beginner's introduction to Python, see the notebook at `solutions/intro-to-python.ipynb`. "
    ]
   },
   {
@@ -27,20 +27,16 @@
    "source": [
     "## Reading in files\n",
     "\n",
-    "The first step is to read in the files containing the data. As we discussed last week, the most common file types for text data are: `.txt`, `.csv`, `.json`, `.html` and `.xml`.\n",
+    "The first step is to read in the files containing the data. The most common file types for text data are: `.txt`, `.csv`, `.json`, `.html` and `.xml`.\n",
     "\n",
-    "#### Reading in `.txt` files\n",
+    "### Reading in `.txt` files\n",
     "\n",
-    "Python has built-in support for reading in `.txt` files.\n",
-    "\n",
-    "- What type of object is `raw`?\n",
-    "- How many characters are in `raw`?\n",
-    "- Get the first 1000 characters of `raw`?"
+    "Python has built-in support for reading in `.txt` files."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,18 +52,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Reading in `.csv`\n",
+    "#### Review of Python string methods\n",
     "\n",
-    "Python has a built-in module called `csv` for reading in csv files.\n",
-    "\n",
-    "- What type is `tweets`?\n",
-    "- How many entries are in `raw`?\n",
-    "- Which entry is the header row?"
+    "- What type of object is `raw`?\n",
+    "- How many characters are in `raw`?\n",
+    "- Get the first 1000 characters of `raw`?\n",
+    "- Join together the first 200 and the last 200 characters of `raw`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reading in `.csv`\n",
+    "\n",
+    "Python has a built-in module called `csv` for reading in csv files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,17 +99,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Reading in `.csv` with `pandas`\n",
+    "#### Review of Python list methods\n",
     "\n",
-    "`pandas` is a third-party library that makes working with tabular data much easier. This is the recommended way to read in a `.csv` file.\n",
-    "\n",
-    "- How many tweets are there?\n",
-    "- What happened to the header row?"
+    "- What data type is `tweets`?\n",
+    "- How many entries are in `tweets`?\n",
+    "- Which entry is the header row?\n",
+    "- Get the first 10 entries.\n",
+    "- Join together the 5th and 10th elements of `tweets`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reading in `.csv` with `pandas`\n",
+    "\n",
+    "`pandas` is a third-party library that makes working with tabular data much easier. This is the recommended way to read in a `.csv` file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,12 +140,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "tweets.head(3)"
+    "#### Review of `pandas`\n",
+    "\n",
+    "- What data type is `tweets`?\n",
+    "- How many tweets are there?\n",
+    "- What happened to the header row?\n",
+    "- Get the first row of `tweets`.\n",
+    "- Get the first 5 entries in the `Tweet_Text` column."
    ]
   },
   {
@@ -122,27 +158,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tweet_text = list(tweets['Tweet_Text'])\n",
-    "tweet_text[:4]"
+    "# your code here"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Reading in multiple files\n",
+    "### Reading in multiple files\n",
     "\n",
-    "Often, our text data is split across multiple files in a folder. We want to be able to read them all into a single variable.\n",
-    "\n",
-    "- What type is `austen`?\n",
-    "- What type is `fnames` after it is first assigned a value?\n",
-    "- What type is `fnames` after it is assigned a second value?\n",
-    "- How "
+    "Often, our text data is split across multiple files in a folder. We want to read them all into a single variable. <br>`glob` is a handy package for this: it lists all files matching a pattern. We can use this to get all files in a folder. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,9 +190,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Challenge \n",
+    "#### Review of working with files\n",
     "\n",
-    "Read in all the `.csv` files in the folder `amazon`. Extract out only the text column from THE FIRST TWO files and store them all in a list called `reviews`."
+    "- What does `os.path.join()` do in this case?\n",
+    "- What type is `fnames` after it is first assigned a value?\n",
+    "- What type is `fnames` after it is assigned a second value?\n",
+    "- How many files are in `fnames`?\n",
+    "- What type is `austen`?"
    ]
   },
   {
@@ -171,7 +205,222 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Challenge \n",
+    "\n",
+    "Read in all the `.csv` files in the folder `amazon`. Extract out only the `text` column from THE FIRST TWO files and store them all in a list called `reviews`. \n",
+    "\n",
+    "**Hint 1:** Not all of these files heave a header row to indicate column names. But for your reference, the columns are in this order: <br>\n",
+    "```Id, ProductId, UserId, ProfileName, HelpfulnessNumerator, HelpfulnessDenominator, Score, Time, Summary, Text```\n",
+    "\n",
+    "**Hint 2:** You can deal with `.csv` files without header rows by calling the argument `header=None` when loading into a pandas DataFrame. This lets pandas know not to mistake the first row of data for column names. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20000</td>\n",
+       "      <td>B002C50X1M</td>\n",
+       "      <td>A3LWC833HQIG7J</td>\n",
+       "      <td>austin_Larry</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1295568000</td>\n",
+       "      <td>Excellent chips, full of flavor and just the r...</td>\n",
+       "      <td>I purchased the Salt and Vinegar chips and hav...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20001</td>\n",
+       "      <td>B002C50X1M</td>\n",
+       "      <td>AJKQOYD9ILG9Y</td>\n",
+       "      <td>T. Ferek</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1295049600</td>\n",
+       "      <td>good chips</td>\n",
+       "      <td>This is a heavy kettle style chip that is not ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20002</td>\n",
+       "      <td>B002C50X1M</td>\n",
+       "      <td>A2WV4N0X29CIFN</td>\n",
+       "      <td>leecash2fly</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1294099200</td>\n",
+       "      <td>Great Chips</td>\n",
+       "      <td>I recently bought these chips.  Came home and ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20003</td>\n",
+       "      <td>B002C50X1M</td>\n",
+       "      <td>A32SQ3PVLO0UGQ</td>\n",
+       "      <td>J. Gilbert</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1293753600</td>\n",
+       "      <td>Very good taste-twist chips</td>\n",
+       "      <td>These are not the \"same old\" chips by far and ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20004</td>\n",
+       "      <td>B002C50X1M</td>\n",
+       "      <td>A1WRBCQDIH209I</td>\n",
+       "      <td>angiechildress</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1286064000</td>\n",
+       "      <td>chips</td>\n",
+       "      <td>I love Rosemary chips, but can't find any at m...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       0           1               2               3  4  5  6           7  \\\n",
+       "0  20000  B002C50X1M  A3LWC833HQIG7J    austin_Larry  0  0  5  1295568000   \n",
+       "1  20001  B002C50X1M   AJKQOYD9ILG9Y        T. Ferek  0  0  5  1295049600   \n",
+       "2  20002  B002C50X1M  A2WV4N0X29CIFN     leecash2fly  0  0  5  1294099200   \n",
+       "3  20003  B002C50X1M  A32SQ3PVLO0UGQ      J. Gilbert  0  0  4  1293753600   \n",
+       "4  20004  B002C50X1M  A1WRBCQDIH209I  angiechildress  0  0  5  1286064000   \n",
+       "\n",
+       "                                                   8  \\\n",
+       "0  Excellent chips, full of flavor and just the r...   \n",
+       "1                                         good chips   \n",
+       "2                                        Great Chips   \n",
+       "3                        Very good taste-twist chips   \n",
+       "4                                              chips   \n",
+       "\n",
+       "                                                   9  \n",
+       "0  I purchased the Salt and Vinegar chips and hav...  \n",
+       "1  This is a heavy kettle style chip that is not ...  \n",
+       "2  I recently bought these chips.  Came home and ...  \n",
+       "3  These are not the \"same old\" chips by far and ...  \n",
+       "4  I love Rosemary chips, but can't find any at m...  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# your solution here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       I purchased the Salt and Vinegar chips and hav...\n",
+       "1       This is a heavy kettle style chip that is not ...\n",
+       "2       I recently bought these chips.  Came home and ...\n",
+       "3       These are not the \"same old\" chips by far and ...\n",
+       "4       I love Rosemary chips, but can't find any at m...\n",
+       "                              ...                        \n",
+       "9995    I really like Pamela's baking mix so I tried t...\n",
+       "9996    This is the best gf bread mix I have found by ...\n",
+       "9997    THIS BREAD MIX IS THE CLOSEST THING TO REGULAR...\n",
+       "9998    Delicious and easy to make.  An excellent brea...\n",
+       "9999    I bought this mix for my daughter's boyfriend,...\n",
+       "Name: 9, Length: 10000, dtype: object"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "amz_df1[9] # This is the `text` column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['I purchased the Salt and Vinegar chips and have been very pleased. There is the right amount of vinegar, virtually every single chip I have tasted is done just right, no burned chips, and they have an excellent thickness to impart just the correct amount of potato taste.<br /><br />They go great with lunches or as a snack. They are very economical. Beats the heck in terms of quality, taste, and price to buying these at work or out and about (I bought the 2 ounce bags). I will be trying some of the other intriguing flavors. Recommended.',\n",
+       " 'This is a heavy kettle style chip that is not as \"heavy\" as kettle brand chips, but bas good flavor.  I will reorder.',\n",
+       " \"I recently bought these chips.  Came home and only three bags were left in the box.  My whole family loves them.  They have great flavor and better and healthier than more chips. I'm ordering a few more boxes today\",\n",
+       " 'These are not the \"same old\" chips by far and the Asian Sweet & Spicy sparked my imagination too, makes you appreciate the new and improved variety of potatoe chips. This flavor is easily an \"8\" on the ten-scale.',\n",
+       " \"I love Rosemary chips, but can't find any at my location. I was glad I came across these, at such a great price.\",\n",
+       " \"The potato chips are wonderfully tasty.  My sons and I both like the Rosemary and Olive Oil because it is not as spicy.  We also got the Jalapeno.  It is not so much I don't like the Jalapeno.  It is spicy hot for me.  I still love the potato chips.\",\n",
+       " 'Being what you would call a chip connoisseur was looking forward to trying these.  Great chips.',\n",
+       " 'Very nice chips; just the right size to serve with a sandwich and watch my calories.',\n",
+       " 'My order was carried out in a fast and effective manner. I received my shipment of chips within two days and had no problems with the retailer.<br /><br />The chips (Sweet Onion variety) are flavorful and particularly crunchy. The only negative--a subjective one--is that the chips may be too salty. Other than that, I would recommend buying these chips again.',\n",
+       " 'This is a re-post of the review I left for the 5 oz bags ... Addictive and totally unexpected. I first tasted these at the Fancy Food Show in New York a couple of years ago. Was amazed to find them on Amazon - and bought immediately for our lunch clients. What you want in a potato chip: the crunch is fantastic and the flavor gives off both rosemary and olive oil, ending in a surprisingly smoky note.']"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews = list(amz_df1[9]) + list(amz_df2[9])\n",
+    "reviews[:10]"
    ]
   },
   {
