added hyperlinks, updated resources

--- a/day-2/dictionary-methods.ipynb
+++ b/day-2/dictionary-methods.ipynb
@@ -20,19 +20,19 @@
     "\n",
     "## Outline\n",
     "(TO DO: Add links for each section)\n",
-    "* Part 0: Basic dictionary method\n",
-    "    0. Introduction to dictionary methods\n",
+    "* [Part 0: Basic dictionary method](#basic)\n",
+    "    0. [Introduction to dictionary methods](#intro)\n",
     "        * Standard dictionaries\n",
     "        * Custom dictionaries\n",
-    "    1. Pre-processing\n",
-    "    2. Creating dictionary counts\n",
-    "    3. Sentiment analysis using Scikit-learn\n",
-    "* Part 1: Weighted dictionary\n",
-    "    0. Read concreteness score dictionary\n",
-    "    1. Merging a DTM with a weighted dictionary\n",
-    "    2. Weight term frequencies by their concreteness score\n",
-    "    3. Calculating an average concreteness score for each text\n",
-    "    4. Assess the difference\n",
+    "    1. [Preprocessing](#preprocess)\n",
+    "    2. [Creating dictionary counts](#counts)\n",
+    "    3. [Sentiment analysis using Scikit-learn](#sentiment)\n",
+    "* [Part 1: Weighted dictionary](#weighting)\n",
+    "    0. [Read concreteness score dictionary](#read)\n",
+    "    1. [Merging a DTM with a weighted dictionary](#merge)\n",
+    "    2. [Weight term frequencies by their concreteness score](#concweight)\n",
+    "    3. [Calculating an average concreteness score for each text](#average)\n",
+    "    4. [Assess the difference](#assess)\n",
     "\n",
     "## Vocabulary\n",
     "\n",
@@ -47,15 +47,16 @@
     "    \n",
     "## Further Resources\n",
     "\n",
-    "TO DO: Edit these resources (consider deleting)\n",
+    "[Gonçalves, Pollyanna, Matheus Araújo, Fabrício Benevenuto, and Meeyoung Cha. 2013. \"Comparing and Combining Sentiment Analysis Methods\"](https://dl.acm.org/doi/abs/10.1145/2512938.2512951)\n",
+    "<br>Compares eight popular sentiment analysis methods (including LIWC and others) and finds wide variation in their results.\n",
     "\n",
-    "[A Novel Method for Detecting Plot](http://www.matthewjockers.net/2014/06/05/a-novel-method-for-detecting-plot/), Matt Jockers\n",
+    "[Jockers, Matthew L. 2015. \"A Novel Method for Detecting Plot\"](http://www.matthewjockers.net/2014/06/05/a-novel-method-for-detecting-plot/)\n",
+    "<br>Blog applying sentiment analysis to several classic novels. \n",
     "\n",
-    "Enns, Peter, Nathan Kelly, Jana Morgan, and Christopher Witko. 2015.[“Money and the Supply\n",
-    "of Political Rhetoric: Understanding the Congressional (Non-)Response to Economic Inequality.”](http://cdn.equitablegrowth.org/wp-content/uploads/2016/06/29155322/enns-kelly-morgan-witko-econinterests-policyagenda.pdf) Paper presented at the APSA Annual Meetings, San Francisco.\n",
-    "* Outlines the process of creating your own dictionary\n",
-    "\n",
-    "[Neal Caren has a tutorial using MPQA](http://nealcaren.web.unc.edu/an-introduction-to-text-analysis-with-python-part-3/), which implements the dictionary method in Python but in a much different way \n",
+    "Examples of creating custom dictionaries:\n",
+    "- [Haber, Jaren. 2020. “Sorting Schools: A Computational Analysis of Charter School Identities and Stratification”](https://doi.org/10.1177/0038040720953218) <br>\n",
+    "- [Enns, Peter, Nathan Kelly, Jana Morgan, and Christopher Witko. 2015. \"Money and the Supply\n",
+    "of Political Rhetoric: Understanding the Congressional (Non-)Response to Economic Inequality”](http://cdn.equitablegrowth.org/wp-content/uploads/2016/06/29155322/enns-kelly-morgan-witko-econinterests-policyagenda.pdf) \n",
     "\n",
     "**__________________________________**\n"
    ]
@@ -64,14 +65,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 0: Basic dictionary methods"
+    "# Part 0: Basic dictionary methods<a id='basic'></a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 0.0 Introduction to dictionary methods\n",
+    "## 0.0 Introduction to dictionary methods<a id='intro'></a>\n",
     "\n",
     "The basic idea behind dictionary methods is that language reflects social position and culture: the cognitive categories through which individuals attend to the world are embedded in the words they use.  Words that are used frequently are cognitively central and reflect what is most on the speaker’s (or writer’s) mind.  Words that are used infrequently or not at all are at the speaker’s cognitive periphery, perhaps even representing uncomfortable or alien concepts.\n",
     "\n",
@@ -105,13 +106,13 @@
     "\n",
     "### Custom dictionaries\n",
     "\n",
-    "Many research questions or data are domain specific, however, and will thus require you to create your own dictionary based on your own knowledge of the domain and question. Creating your own dictionary requires a lot of thought, and must be validated. These dictionaries are typically created in an interative fashion, and are modified as they are validated. See Enns et al. (2015) or Haber (2020) for examples of how to construct a domain-specific dictionary. \n",
+    "Many research questions or data are domain specific, however, and will thus require you to create your own dictionary based on your own knowledge of the domain and question. Creating your own dictionary requires a lot of thought, and must be validated. These dictionaries are typically created in an interative fashion, and are modified as they are validated. See references & links above to Enns et al. (2015) or Haber (2020) for examples of how to construct a domain-specific dictionary. \n",
     "\n",
     "Today we will use the free and standard sentiment dictionary from MPQA (or VADER?) to measure positive and negative sentiment in the music reviews.\n",
     "\n",
     "Our first step, as with any technique, is the pre-processing step, to get the data ready for analyis.\n",
     "\n",
-    "## 0.1 Pre-processing\n",
+    "## 0.1 Pre-processing<a id='preprocess'></a>\n",
     "\n",
     "First, read in our Music Reviews corpus as a Pandas dataframe."
    ]
@@ -458,7 +459,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 0.2. Creating dictionary counts\n",
+    "## 0.2. Creating dictionary counts<a id='counts'></a>\n",
     "\n",
     "I created two text files, one is a list of positive words from the MPQA dictionary, the other is a list of negative words. One word per line. Our goal here is to count the number of positive and negative words in each row of our dataframe, and add two columns to our dataset with the count of positive and negative words.\n",
     "\n",
@@ -1579,7 +1580,7 @@
    "source": [
     "That's the dictionary method! You can do this with any dictionary you want, standard or you can create your own.\n",
     "\n",
-    "## 0.3. Sentiment analysis using scikit-learn\n",
+    "## 0.3. Sentiment analysis using scikit-learn<a id='sentiment'></a>\n",
     "\n",
     "We can also do this using the document term matrix. We'll do this in pandas, to make it conceptually clear. As you get more comfortable with programming you may want to eventually shift over to working with sparse matrix format, which is more efficient to work with."
    ]
@@ -4441,7 +4442,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 1: Weighting dictionaries"
+    "# Part 1: Weighting dictionaries<a id='weighting'></a>"
    ]
   },
   {
@@ -4452,7 +4453,7 @@
     "\n",
     "This could be done using a regular dictionary: a list of concrete and abstract words. Instead, we'll use a crowdsourced dictionary that provides an average \"concreteness score\" for a large number of English words.\n",
     "\n",
-    "## 1.1 Read concreteness score dictionary\n",
+    "## 1.1 Read concreteness score dictionary<a id='read'></a>\n",
     "\n",
     "First we'll create a pandas dataframe from the concreteness score dictionary, saved on our hard drive in the form of a .csv file.\n",
     "\n",
@@ -4925,7 +4926,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.2. Merging a DTM with a weighted dictionary\n",
+    "## 1.2. Merging a DTM with a weighted dictionary<a id='merge'></a>\n",
     "\n",
     "The goal is to merge this score with our document term matrix, so we can calculate the average concreteness score for our texts.\n",
     "\n",
@@ -5857,7 +5858,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.3. Weighting term frequencies by the concreteness score\n",
+    "## 1.3. Weighting term frequencies by the concreteness score<a id='concweight'></a>\n",
     "\n",
     "Now we can weight the term frquency cells by the concreteness score, by multiplying the frequency count column by the concreteness score column."
    ]
@@ -6398,7 +6399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.4. Assessing the difference\n",
+    "## 1.4. Assessing the difference<a id='assess'></a>\n",
     "\n",
     "So there is a difference, but what does it mean? What is the magnitude of the difference?\n",
     "\n",
