--- a/day-2/dictionary-methods-additional-exercises-pt1.ipynb
+++ b/day-2/dictionary-methods-additional-exercises-pt1.ipynb
@@ -4,107 +4,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Additional Exercises for 02.27: Dictionary Method"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ex. \n",
-    "\n",
-    "1. Read in the `childrens_lit.csv.bz2` file from the `data` folder.\n",
-    "2. Come up with a hypothesis on what you think the sentiment ratings is for children's literature.\n",
-    "3. Do a sentiment analysis on a subset of chilren's literature using the dictionary method from lecture.\n",
-    "    - Use the positive and negative words from lecture"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Question 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import nltk\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
-    "#read in our data\n",
-    "df = ..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Since the number of children literaturs is a lot to analyze, we'll just randomly select 5 books to do a sentiment analysis using the dictionary method.\n",
-    "\n",
-    "*Note*: In case you're not familiar with seed. Seed is just a function that initializes a fixed state for random number generatoring. Basically if everyone uses the same number as an input to `seed()`, then everyone will get the same result when generating randomly."
+    "## Weighted Dictionary: Additional Exercises\n",
+    "* For an extra challenge, do these exercises **without** copying and pasting code from workshop notebook."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "np.random.seed(1)\n",
-    "df = df.sample(5)\n",
-    "df"
+    "import pandas\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "con_score = pandas.read_csv('../day-2/data/Concreteness_ratings_Brysbaert_et_al.csv')\n",
+    "print(con_score)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 2"
+    "## Question 1\n",
+    "* open the **Machiavelli_ThePrince.txt** and **Marx_CommunistManifesto.txt**.\n",
+    "* make a data frame that contains both of them."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[your hypothesis here]"
+    "## Question 2\n",
+    "* take a subset of the DTM, keeping only the intersection between the words in our corpus and the word in the dictionary.\n",
+    "* tanspose and rename the column\n",
+    "* finally merge our data frame with con_score data frame\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 3"
+    "## Question 3\n",
+    "* Calculate and print the **average concreteness score** for each text.\n",
+    "* What is the magnitude of the difference?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -118,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
